fix IE layout problem

--- a/web/css/voting.css
+++ b/web/css/voting.css
@@ -45,6 +45,7 @@
     -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    position:absolute;
 }
 .login-title
 {
